--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "body-parser": "^1.17.1",
     "create-react-class": "^15.5.3",
     "css-loader": "^0.28.1",
+    "eslint": "^3.19.0",
+    "eslint-plugin-react": "^7.0.1",
     "express": "^4.15.2",
     "google-map-react": "^0.24.0",
     "google-maps-react": "^1.0.19",
+    "jquery": "^3.2.1",
     "mongoose": "^4.9.8",
     "node-sass": "^4.5.2",
     "nodemon": "^1.11.0",
