Export file CSV, change plugin react-google-maps

--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "nodemon": "^1.11.0",
     "prop-types": "^15.5.9",
     "react": "^15.5.4",
+    "react-csv": "^1.0.8",
     "react-custom-scrollbars": "^4.1.1",
     "react-dom": "^15.5.4",
     "react-fontawesome": "^1.6.1",
+    "react-google-maps": "^6.3.0",
     "react-icons": "^2.2.5",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
