--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-fontawesome": "^1.6.1",
     "react-google-maps": "^6.3.0",
     "react-icons": "^2.2.5",
+    "react-places-autocomplete": "^5.1.0",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
